--- a/team_project/views/account.ejs
+++ b/team_project/views/account.ejs
@@ -35,6 +35,18 @@
 </head>
 
 <body>
+	<script>
+		function getUrlVars() {
+    		var vars = [];
+    		var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+        		vars[key] = value;
+    		});
+    		return vars;
+		}
+		var URLVars = getUrlVars();
+		console.log(URLVars);
+		console.log(URLVars[0]);
+	</script>
 	<!--Top-->
 	<nav id="top">
 		<div class="container">
@@ -157,12 +169,12 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="heading"><h2>Login</h2></div>
-					<form name="form1" id="ff1" method="post" action="login.php">
+					<form name="form1" id="ff1" method="post" action="account/login">
 						<div class="form-group">
 							<input type="text" class="form-control" placeholder="Username :" name="username" id="username" required>
 						</div>
 						<div class="form-group">
-							<input type="password" class="form-control" placeholder="Password :" name="email" id="email" required>
+							<input type="password" class="form-control" placeholder="Password :" name="password" id="password" required>
 						</div>
 						<button type="submit" class="btn btn-1" name="login" id="login">Login</button>
 						<a href="#">Forgot Your Password ?</a>
